--- a/fbu_twitter_starter/twitter/Base.lproj/Main.storyboard
+++ b/fbu_twitter_starter/twitter/Base.lproj/Main.storyboard
@@ -150,6 +150,9 @@
                                                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                             <state key="normal" title=" " image="favor-icon"/>
                                                             <buttonConfiguration key="configuration" style="plain" image="favor-icon" title=" xxx"/>
+                                                            <connections>
+                                                                <action selector="didTapFavorite:" destination="cxh-9D-Bkj" eventType="touchUpInside" id="Egv-cA-PRM"/>
+                                                            </connections>
                                                         </button>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x1b-XI-fz5">
                                                             <rect key="frame" x="384" y="0.0" width="20" height="20"/>
