--- a/fbu_twitter_starter/twitter/Base.lproj/Main.storyboard
+++ b/fbu_twitter_starter/twitter/Base.lproj/Main.storyboard
@@ -139,6 +139,9 @@
                                                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                             <state key="normal" title=" XXX" image="retweet-icon"/>
                                                             <buttonConfiguration key="configuration" style="plain" image="retweet-icon" title="xxx"/>
+                                                            <connections>
+                                                                <action selector="didRetweet:" destination="cxh-9D-Bkj" eventType="touchUpInside" id="XTT-N6-HqN"/>
+                                                            </connections>
                                                         </button>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gQq-tG-E8I">
                                                             <rect key="frame" x="290" y="0.0" width="16" height="20"/>
